# ImageEditor

./: .gitignore  CMakeLists.txt
OpenGLWidget/: TanmiWidget.cpp  TanmiWidget.h
OperationStack/: OperationData.h  OperationStack.cpp  OperationStack.h
Picture/: Picture.cpp  Picture.h  PictureLoader.cpp  PictureLoader.h  stb_image.h  stb_image_write.h
Qt/: QtSliderSpinBox.cpp  QtSliderSpinBox.h
Renderable/: EditablePicture.cpp  EditablePicture.h  RenderableObject.cpp  RenderableObject.h  RenderablePart.h
Shader/: Shader.cpp  Shader.h
Shader/file/: DefaultShapeShaderFrag.glsl  DefaultShapeShaderVert.glsl  EditablePictureShaderFrag.glsl  EditablePictureShaderVert.glsl  TextureShaderFrag.glsl
Shape/: BGShape.cpp  BGShape.h
Texture/: Texture.cpp  Texture.h  TextureData.h
Timer/: Timer.cpp  Timer.h
Transform/: Transform.cpp  Transform.h
UI/: MainWindow.ui
VertexBuilder/: VertexBufferBuilder.cpp  VertexBufferBuilder.h  VertexBufferBuilder.inl
header/: Define.h  MainWindow.h  Tools.h
src/: Define.cpp  MainWindow.cpp  glad.c  main.cpp
